# tetras-toolbox

./: README.md  build.sh  pyproject.toml
src/: fixed_point.py  interact.py
src/tetras_even_more_itertools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tetras_toolbox/: _type_t.py  fixed_point.py  interact.py
tetras_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
